final project fixed ishew with cutting off partal last user post removed dead code and moved remaining images to resources file

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -1,4 +1,4 @@
 $breakpoints: (
-  medium: 500px,
-  large: 1000px,
+  medium: 700px,
+  large: 1100px,
 );
