--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -6,12 +6,12 @@
   align-items: center;
   border-bottom: 4px solid black;
   li {
+    cursor: pointer;
     padding: 0 3px;
     border-bottom: 3px solid transparent;
     &:hover {
       border-bottom: 3px solid white;
     }
-
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
   }
