--- a/scss/_post's-individual-comments.scss
+++ b/scss/_post's-individual-comments.scss
@@ -3,7 +3,7 @@
   z-index: 100;
   position: absolute;
   height: fit-content;
-  width: 90%;
+  width: 80%;
   padding-top: 5px;
   text-indent: 10px;
   background-color: rgba(var.$secondary-color, 0.7);
