--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ header {
   background-color: var.$secondary-color;
   display: flex;
   flex-wrap: wrap;
-  max-width: 1200px;
+  max-width: 1100px;
   h1 {
     font-size: map-get(var.$font-sizes, x-large);
     width: 25%;
@@ -44,7 +44,7 @@ h2 {
   padding-top: 10px;
 }
 .user-img {
-  background-image: url(../avatar.png);
+  background-image: url(../resources/avatar.png);
   background-size: cover;
   height: 40px;
   width: 40px;
@@ -94,20 +94,10 @@ h2 {
   .main-content {
     background-color: lighten(var.$secondary-color, 5);
   }
-  #posts {
-    overflow: scroll;
-    overflow-x: hidden;
-    max-height: 100vh;
-    scrollbar-color: var.$primary-color var.$primary-color;
-  }
+
   #active-friends {
-    overflow: scroll;
-    overflow-x: hidden;
-    max-height: 100vh;
-    height: fit-content;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
     background-color: var.$primary-color;
     span {
       display: block;
@@ -142,6 +132,12 @@ h2 {
       border-radius: 50%;
       background-color: var.$secondary-color;
     }
+  }
+  aside {
+    overflow: scroll;
+    overflow-x: hidden;
+    max-height: 75vh;
+    padding-bottom: 200px;
   }
 }
 @media (min-width: map-get(brkpoints.$breakpoints, large)) {
